# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id$

# Author:  Andreas Waechter           IBM    2006-04-13

AUTOMAKE_OPTIONS = foreign

########################################################################
#                         unitTest for Coin                            #
########################################################################

noinst_PROGRAMS = unitTest

unitTest_SOURCES = \
	OsiColCutTest.cpp \
	OsiCutsTest.cpp \
	OsiRowCutDebuggerTest.cpp \
	OsiRowCutTest.cpp \
	OsiSolverInterfaceTest.cpp \
	unitTest.cpp

# List libraries of COIN projects
unitTest_LDADD =

# List additional libraries
#LIBS +=

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Windows
AM_CPPFLAGS = $(MSKCXXFLAGS) \
	-I`$(CYGPATH_W) $(COINUTILSSRCDIR)/src` \
	-I`$(CYGPATH_W) $(COINUTILSOBJDIR)/inc` \
	-I`$(CYGPATH_W) $(srcdir)/../src`

# This line is necessary to allow VPATH compilation with MS compilers
# on Cygwin
DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(srcdir)` -I$(top_builddir)/inc

# Depending of what solvers are available, we add the corresponding files,
# libraries and include dirs

if COIN_HAS_CPX
  unitTest_SOURCES += OsiCpxSolverInterfaceTest.cpp
  AM_CPPFLAGS += -I`$(CYGPATH_W) $(CPXINCDIR)` \
	-I`$(CYGPATH_W) $(srcdir)/../src/OsiCpx`
  unitTest_LDADD += ../src/OsiCpx/libOsiCpx.la
endif

if COIN_HAS_FMP
  unitTest_SOURCES += OsiFmpSolverInterfaceTest.cpp
  AM_CPPFLAGS += -I`$(CYGPATH_W) $(srcdir)/../src/OsiFmp`
  unitTest_LDADD += ../src/OsiFmp/libOsiFmp.la
endif

if COIN_HAS_GLPK
  unitTest_SOURCES += OsiGlpkSolverInterfaceTest.cpp
  AM_CPPFLAGS += -I`$(CYGPATH_W) $(GLPKINCDIR)` \
	-I`$(CYGPATH_W) $(srcdir)/../src/OsiGlpk`
  unitTest_LDADD += ../src/OsiGlpk/libOsiGlpk.la
endif

if COIN_HAS_MSK
  unitTest_SOURCES += OsiMskSolverInterfaceTest.cpp
  AM_CPPFLAGS += -I`$(CYGPATH_W) $(MSKINCDIR)` \
	-I`$(CYGPATH_W) $(srcdir)/../src/OsiMsk`
  unitTest_LDADD += ../src/OsiMsk/libOsiMsk.la
endif

if COIN_HAS_OSL
  unitTest_SOURCES += OsiOslSolverInterfaceTest.cpp
  AM_CPPFLAGS += -I`$(CYGPATH_W) $(OSLINCDIR)` \
	-I`$(CYGPATH_W) $(srcdir)/../src/OsiOsl`
  unitTest_LDADD += ../src/OsiOsl/libOsiOsl.la
endif

if COIN_HAS_XPR
  unitTest_SOURCES += OsiXprSolverInterfaceTest.cpp
  AM_CPPFLAGS += -I`$(CYGPATH_W) $(XPRINCDIR)` \
	-I`$(CYGPATH_W) $(srcdir)/../src/OsiXpr`
  unitTest_LDADD += ../src/OsiXpr/libOsiXpr.la
endif

if COIN_HAS_GRB
  unitTest_SOURCES += OsiGrbSolverInterfaceTest.cpp
  AM_CPPFLAGS += -I`$(CYGPATH_W) $(GRBINCDIR)` \
	-I`$(CYGPATH_W) $(srcdir)/../src/OsiGrb`
  unitTest_LDADD += ../src/OsiGrb/libOsiGrb.la
endif

# Finally the Coin library (many of the above need it)
unitTest_LDADD += ../src/libOsi.la $(COINUTILSOBJDIR)/src/libCoinUtils.la
LIBS += `cat $(OSIOBJDIR)/osi_addlibs.txt` \
	`cat $(COINUTILSOBJDIR)/coinutils_addlibs.txt` $(ADDLIBS)

test: unitTest$(EXEEXT)
	@if test x"$(DIRNETLIB)" != x; then \
		NETLIBARG="-netlibDir $(DIRNETLIB) -testOsiSolverInterface"; \
	fi; \
	./unitTest$(EXEEXT) $$NETLIBARG

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = *.mps *.mps.gz *.lp test2out *.out.gz *.out
